--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Learning git</h1>
+    <h1>Learning gitpart123</h1>
     <h1>Learning githubpart2</h1>
     
 </body>
